added status and user to individual tasks on a group task list

--- a/app/views/group_tasks/show.html.erb
+++ b/app/views/group_tasks/show.html.erb
@@ -7,3 +7,17 @@
 <% else %>
   <h3>Status: In Progress</h3>
 <% end %>
+
+<ul>
+  <% @group_task.tasks.each do |t| %>
+  <li><%= t.name %></li>
+
+   <% if  t.status == true %>
+     <p>Status: Complete<p>
+   <% else %>
+     <p>Status: In Progress</p>
+   <% end %>
+
+   <p>User: <%= User.find(t.user_id).email %> </p>
+  <%end%>
+</ul>
