--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,5 +2,6 @@
   <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
 <% else %>
   <%= link_to "Home", root_path, method: :get %>
+  <%= link_to "Group Tasks", group_tasks_path, method: :get %>
   <%= link_to "Logout", destroy_user_session_path, method: :delete %>
 <% end %>
