added a link to create new task and added a new view for tasks

--- a/app/views/group_tasks/show.html.erb
+++ b/app/views/group_tasks/show.html.erb
@@ -21,3 +21,5 @@
    <p>User: <%= User.find(t.user_id).email %> </p>
   <%end%>
 </ul>
+
+<%= link_to 'Create a Task', new_task_path, { :class=>"button" } %>
