got link to new task work with nested route path

--- a/app/views/group_tasks/show.html.erb
+++ b/app/views/group_tasks/show.html.erb
@@ -22,4 +22,4 @@
   <%end%>
 </ul>
 
-<%= link_to 'Create a Task', new_task_path, { :class=>"button" } %>
+<%= link_to 'Create a Task',  new_group_task_task_path(@group_task), { :class=>"button" } %>
